--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@ionic/angular": "^6.1.9",
     "axios": "^0.27.2",
     "crypto-js": "^4.1.1",
+    "electron": "^20.0.1",
+    "ngx-electron": "^2.2.0",
     "ngx-pagination": "^6.0.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.2.0",
@@ -50,6 +52,7 @@
     "@types/node": "^12.20.55",
     "@typescript-eslint/eslint-plugin": "5.3.0",
     "@typescript-eslint/parser": "5.3.0",
+    "electron-packager": "^15.5.1",
     "eslint": "^7.6.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jsdoc": "30.7.6",
